# chiaki-ng

./: .gitignore
bindings/rust/: Cargo.toml
bindings/rust/chiaki/: Cargo.toml  README.md
bindings/rust/chiaki-sys/: Cargo.toml  README.md  build.rs
bindings/rust/chiaki-sys/examples/: discovery.rs
bindings/rust/chiaki-sys/src/: lib.rs
bindings/rust/chiaki/examples/: controller.rs  controllermanager.rs  discovery.rs  dualsense_control.rs  psn_auth.rs  regist.rs  session.rs  stream_and_control.rs
bindings/rust/chiaki/src/: controller.rs  controllermanager.rs  discovery.rs  error.rs  feedback.rs  haptics.rs  lib.rs  log.rs  mic.rs  psn_auth.rs  regist.rs  session.rs  stats.rs  stream.rs  types.rs
