[package]
name = "chiaki"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for chiaki-ng"

[dependencies]
chiaki-sys = { path = "../chiaki-sys" }
thiserror = "2"
bitflags = "2"
sdl2 = { version = "0.38", features = ["hidapi"], optional = true }

[features]
sdl-controller = ["dep:sdl2"]

[dev-dependencies]
ctrlc = "3"

[[example]]
name = "controllermanager"
required-features = ["sdl-controller"]
